index.css
/* ... */
.alert {
  border-width: 2px;
}

@media screen and (max-width: 594px) {
  .card-columns {
    column-count: 1;
  }
}

@media screen and (min-width: 594px) and (max-width: 1024px) {
  .card-columns {
    column-count: 2;
  }
  .card-columns.wide {
    column-count: 1;
  }
}

@media screen and (min-width: 1024px) {
  .card-columns {
    column-count: 3;
  }
  .card-columns.wide {
    column-count: 2;
  }
}

.caption {
  color: #9e9e9e !important;
  font-family: "Open Sans", Roboto, sans-serif;
  font-size: 0.75rem;
  margin-bottom: 1.5rem;
  text-align: center;
  width: 100%;
}

.caption a {
  color: #9e9e9e !important;
  font-size: 0.75rem;
}

.caption a:visited {
  color: #9e9e9e !important;
}

.caption a:active,
.caption a:focus,
.caption a:hover {
  color: #848484;
}

.citation {
  font-size: 0.75rem;
  line-height: 1;
  margin-bottom: 0.2rem;
}

.highlight {
  background: #ff0;
}

.topic {
  background: #e3f6fc;
  border-radius: 0.4rem;
  color: #3e64a0;
  display: inline-block;
  font-size: 0.875rem;
  margin-bottom: 0.4rem;
  margin-right: 0.2rem;
  padding: 0.2rem 0.4rem;
  text-decoration: none;
  transition: background 0.2s ease;
}

a.topic {
  border: 0;
  box-shadow: none;
  color: #3e64a0 !important;
}

a.topic:hover {
  background: #b4e7f8;
}

a:active.topic,
a:focus.topic,
a:hover.topic,
a:visited.topic {
  color: #3e64a0 !important;
  text-decoration: none;
}

.underline {
  text-decoration: underline;
}

.italics {
  font-style: italic;
}

.line,
hr {
  border-top: 2px solid rgba(26, 26, 26, 0.1);
  display: block;
  height: 0;
  margin: 1rem 0;
  width: 100%;
}

.center {
  text-align: center;
}

.post h1,
.post h2,
.post h3,
.post h4,
.post h5,
.post h6 {
  font-weight: 600;
  line-height: 1.25;
  margin-top: 1.5rem;
}

.post p {
  line-height: 1.75;
}

.post .code {
  background: #f4f4f7;
  border-radius: 0.2rem;
  margin-bottom: 1rem;
  overflow-x: scroll;
  padding: 1rem;
}

.post .code xmp {
  font-family: monospace;
  font-size: 1rem;
  margin: 0;
}

.post code {
  background: #f4f4f7;
  border-radius: 0.2rem;
  padding: 0 0.2rem;
}

.post .blockquote {
  border-left: 4px solid #f4f4f7;
  color: #848484;
  font-style: italic;
  padding: 0.25rem 0 0.25rem 1rem;
}

.post .blockquote .author {
  display: block;
  font-size: 1rem;
  font-style: normal;
  padding-top: 0.25rem;
  text-align: right;
}

.card-post h1,
.card-post h2,
.card-post h3 {
  line-height: 1.2;
}

.card-post h1 {
  font-size: 2rem;
}

.card-post h2 {
  font-size: 1.5rem;
}

.card-post h3 {
  font-size: 1.25rem;
}

.card-post .line {
  margin: 0.75rem 0;
}

@media screen and (min-width: 1024px) {
  .post h1,
  .post h2,
  .post h3,
  .post h4,
  .post h5,
  .post h6 {
    margin-bottom: 1rem;
    margin-top: calc(1.5rem + 1.25vh);
  }
  .card-post .body:first-child {
    padding-top: calc(1.5rem + 2.5vh) !important;
  }
  .card-post .body:last-child {
    padding-bottom: calc(1.5rem + 2.5vh) !important;
  }
}

.mac-wrapper {
  padding-bottom: 0.5rem;
  padding-top: 1rem;
  position: relative;
  width: 100%;
}

.mac-wrapper .mac {
  margin-bottom: 1rem;
}

.mac-wrapper .mac-img {
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  height: auto;
  margin-left: 12.5%;
  margin-top: 3.5%;
  padding-top: 47%;
  position: absolute;
  width: 75%;
}

.carousel {
  margin-bottom: 0.5rem;
  overflow: hidden;
  padding-bottom: 0.5rem;
  padding-top: 0.5rem;
}

.carousel .carousel-item {
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  padding-top: 56.25%;
  width: 100%;
}

.browser {
  border-radius: 0.2rem;
  box-shadow: 0 0.1rem 0.4rem rgba(0, 0, 0, 0.1);
}

.browser .top {
  background: #dbdbe0;
  border: 1px solid rgba(0, 0, 0, 0.1);
  border-radius: 0.2rem 0.2rem 0 0;
  height: 2.25rem;
  padding: 0.5rem;
  text-align: right;
}

.browser .top .circle {
  background: rgba(0, 0, 0, 0.1);
  border-radius: 50%;
  display: inline-block;
  height: 1.25rem;
  margin-left: 0.5rem;
  width: 1.25rem;
}

.browser .body {
  background: #fff;
  border: 1px solid rgba(0, 0, 0, 0.175);
  border-radius: 0 0 0.2rem 0.2rem;
  border-top: 0 solid transparent;
  padding: 1rem;
}

.browser-screenshot {
  background: #dbdbe0;
  border: 1px solid rgba(0, 0, 0, 0.1);
  border-radius: 0.2rem;
  box-shadow: 0 0.1rem 0.4rem rgba(0, 0, 0, 0.1);
  padding: 0% 1.25% 2.5%;
}

.browser-screenshot .top {
  height: 2rem;
  padding: 0.5rem 0;
  text-align: right;
}

.browser-screenshot .top .circle {
  background: rgba(0, 0, 0, 0.1);
  border-radius: 50%;
  display: inline-block;
  height: 1rem;
  margin-left: 0.25rem;
  width: 1rem;
}

.system-screenshot {
  background: #fff;
  border: 1px solid rgba(0, 0, 0, 0.1);
  border-radius: 0.2rem;
  box-shadow: 0 0.1rem 0.4rem rgba(0, 0, 0, 0.1);
  padding: 0% 1.25% 2.5%;
  padding-left: 1rem;
  padding-right: 1rem;
  max-height: 23rem;
}

.system-screenshot .top {
  height: 2rem;
  padding: 0.5rem 0;
  text-align: right;
}

.system-screenshot .top .circle {
  background: rgba(0, 0, 0, 0.1);
  border-radius: 50%;
  display: inline-block;
  height: 1rem;
  margin-left: 0.25rem;
  width: 1rem;
}

.mobile-screenshot {
  max-height: 30rem;
  text-align: center !important;
  margin: 0 auto;
}

.four {
  text-align: center;
  display: block;
}

.four-img {
  max-width: 100%;
  height: auto;
  width: auto;
}

.project {
  align-items: flex-end;
  border-radius: 0.2rem;
  box-shadow: 0 0.1rem 0.4rem rgba(0, 0, 0, 0.05);
  color: #fff;
  display: flex;
  flex-direction: row;
  margin-bottom: 2rem;
  overflow: hidden;
  padding: 0 2.5%;
}

.project .screenshot-wrapper {
  padding: 5% 0 0 1rem;
}

.project:nth-child(even) {
  flex-direction: row-reverse;
}

.project:nth-child(even) .screenshot-wrapper {
  padding: 5% 1rem 0 0;
}

.project .screenshot-wrapper,
.project .text {
  flex: 1;
}
/* ... */

